# dawn

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  QUICK_START.sh  README.md  REDESIGN_COMPLETE.md  dawn_dev.sqlite3  package-lock.json  pyproject.toml  record_demo.py  render.yaml  start_dawn.sh  tmp_feed.sqlite3
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: cli.py
app/api/: admin.py  agents.py  auth.py  backends.py  demo.py  excel.py  feeds.py  jobs.py  lmstudio.py  nl_sql.py  rag.py  server.py  transforms.py
app/core/: agent_graph.py  auth.py  backend_connectors.py  backend_seed.py  chat_graph.py  chat_models.py  config.py  db.py  demo.py  dq.py  dq_runner.py  feed_ingest.py  limits.py  llm.py  lmstudio.py  models.py  nl2sql.py  nl_filter.py  orchestration.py  rag.py  redis_client.py  runner_meta.py  scheduler.py  storage.py  summary_answers.py  transforms.py
app/streamlit_app/: main.py
app/tests/: conftest.py  test_agent_graph.py  test_api_excel.py  test_api_feeds.py  test_api_rag.py  test_auth.py  test_backends.py  test_config.py  test_excel_ingestion.py  test_excel_summary.py  test_feed_materialization.py  test_jobs.py  test_llm.py  test_nl2sql.py  test_nl_filter.py  test_nl_sql.py  test_rag_core.py  (+2 more)
demo_assets/: support_copilot_demo.xlsx  support_copilot_followup.xlsx  support_transform.json
docs/: AGENT_ARCHITECTURE.md  API_REFERENCE.md  DAWN_Demo_Workbook.xlsx  README.md  UI_UX_DESIGN_GUIDE.md  UI_UX_IMPROVEMENTS.md  USER_GUIDE.md  WEB_COMPONENTS_REFERENCE.md  datafeed_roadmap.md  ~$DAWN_Demo_Workbook.xlsx
infra/: docker-compose.dev.yml
scripts/: docker-entrypoint.sh  reset_dawn.sh
web/: .eslintrc.cjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+71 files in other folders)
